--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,15 +10,15 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.simplemobiletools.gallery.pro"
+        applicationId "loitp93.gallery"
         minSdkVersion 21
-        targetSdkVersion 29
-        versionCode 341
-        versionName "6.19.6"
+        targetSdkVersion 30
+        versionCode 1
+        versionName "1.0.1"
         setProperty("archivesBaseName", "gallery-$versionCode")
         vectorDrawables.useSupportLibrary = true
     }
