--- a/app/src/proprietary/AndroidManifest.xml
+++ b/app/src/proprietary/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".activities.EditActivity">
+            android:name="com.loitp.ui.activity.EditActivity">
 
             <intent-filter
                 android:name="foss-editor"
