--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -167,7 +167,7 @@
             android:theme="@style/FullScreenTheme"/>
 
         <activity
-            android:name=".activities.IncludedFoldersActivity"
+            android:name="com.loitp.ui.activity.IncludedFoldersActivity"
             android:label="@string/include_folders"
             android:parentActivityName=".activities.SettingsActivity"/>
 
@@ -177,7 +177,7 @@
             android:parentActivityName=".activities.SettingsActivity"/>
 
         <activity
-            android:name=".activities.HiddenFoldersActivity"
+            android:name="com.loitp.ui.activity.HiddenFoldersActivity"
             android:label="@string/hidden_folders"
             android:parentActivityName=".activities.SettingsActivity"/>
 
