--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         android:required="false"/>
 
     <application
-        android:name=".App"
+        android:name="com.loitp.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_launcher_name"
@@ -43,7 +43,7 @@
             android:theme="@style/SplashTheme"/>
 
         <activity
-            android:name=".activities.MainActivity"
+            android:name="com.loitp.ui.activity.MainActivity"
             android:resizeableActivity="true">
 
             <meta-data
@@ -79,7 +79,7 @@
 
         <activity
             android:name=".activities.MediaActivity"
-            android:parentActivityName=".activities.MainActivity">
+            android:parentActivityName="com.loitp.ui.activity.MainActivity">
 
             <meta-data
                 android:name="android.app.default_searchable"
@@ -94,7 +94,7 @@
         <activity
             android:name=".activities.SearchActivity"
             android:label="@string/search"
-            android:parentActivityName=".activities.MainActivity"
+            android:parentActivityName="com.loitp.ui.activity.MainActivity"
             android:resizeableActivity="true">
 
             <meta-data
@@ -125,7 +125,7 @@
         <activity
             android:name="com.simplemobiletools.commons.activities.AboutActivity"
             android:label="@string/about"
-            android:parentActivityName=".activities.MainActivity"/>
+            android:parentActivityName="com.loitp.ui.activity.MainActivity"/>
 
         <activity
             android:name="com.simplemobiletools.commons.activities.LicenseActivity"
@@ -145,7 +145,7 @@
         <activity
             android:name=".activities.SettingsActivity"
             android:label="@string/settings"
-            android:parentActivityName=".activities.MainActivity"/>
+            android:parentActivityName="com.loitp.ui.activity.MainActivity"/>
 
         <activity
             android:name=".activities.PhotoVideoActivity"
