--- a/app/src/proprietary/AndroidManifest.xml
+++ b/app/src/proprietary/AndroidManifest.xml
@@ -6,7 +6,7 @@
     android:installLocation="auto">
 
     <application
-        android:name=".App"
+        android:name="com.loitp.App"
         android:theme="@style/AppTheme">
 
         <activity
