--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,7 +78,7 @@
         </activity>
 
         <activity
-            android:name=".activities.MediaActivity"
+            android:name="com.loitp.ui.activity.MediaActivity"
             android:parentActivityName="com.loitp.ui.activity.MainActivity">
 
             <meta-data
@@ -109,7 +109,7 @@
         <activity
             android:name=".activities.ViewPagerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:parentActivityName=".activities.MediaActivity">
+            android:parentActivityName="com.loitp.ui.activity.MediaActivity">
 
             <intent-filter>
                 <action android:name="com.android.camera.action.REVIEW"/>
@@ -154,7 +154,7 @@
         <activity
             android:name=".activities.VideoPlayerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:parentActivityName=".activities.MediaActivity"/>
+            android:parentActivityName="com.loitp.ui.activity.MediaActivity"/>
 
         <activity
             android:name=".activities.PanoramaPhotoActivity"
