--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -162,7 +162,7 @@
             android:theme="@style/FullScreenTheme"/>
 
         <activity
-            android:name=".activities.PanoramaVideoActivity"
+            android:name="com.loitp.ui.activity.PanoramaVideoActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/FullScreenTheme"/>
 
