--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "loitp93.gallery"
+        applicationId "com.simplemobiletools.gallery.loitp93"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
