--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -152,7 +152,7 @@
             android:configChanges="orientation|keyboardHidden|screenSize"/>
 
         <activity
-            android:name=".activities.VideoPlayerActivity"
+            android:name="com.loitp.ui.activity.VideoPlayerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:parentActivityName="com.loitp.ui.activity.MediaActivity"/>
 
@@ -195,7 +195,7 @@
         </activity>
 
         <activity
-            android:name=".activities.VideoActivity"
+            android:name="com.loitp.ui.activity.VideoActivity"
             android:configChanges="orientation|keyboardHidden|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
