--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,7 +107,7 @@
         </activity>
 
         <activity
-            android:name=".activities.ViewPagerActivity"
+            android:name="com.loitp.ui.activity.ViewPagerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:parentActivityName="com.loitp.ui.activity.MediaActivity">
 
@@ -253,7 +253,7 @@
         </activity>
 
         <activity
-            android:name=".activities.WidgetConfigureActivity"
+            android:name="com.loitp.ui.activity.WidgetConfigureActivity"
             android:screenOrientation="portrait"
             android:theme="@style/MyWidgetConfigTheme">
             <intent-filter>
