--- a/build.gradle
+++ b/build.gradle
@@ -2,25 +2,22 @@
 
 buildscript {
     ext.kotlin_version = '1.4.32'
-    ext.is_proprietary = gradle.startParameter.taskNames.any { task -> task.contains("Proprietary") }
+//    ext.is_proprietary = gradle.startParameter.taskNames.any { task -> task.contains("Proprietary") }
 
     repositories {
         google()
         jcenter()
-        if (is_proprietary) {
-            maven { url 'https://artifactory.img.ly/artifactory/imgly' }
-        }
+//        if (is_proprietary) {
+//            maven { url 'https://artifactory.img.ly/artifactory/imgly' }
+//        }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        if (is_proprietary) {
-            classpath 'ly.img.android.pesdk:plugin:8.1.3'
-        }
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+//        if (is_proprietary) {
+//            classpath 'ly.img.android.pesdk:plugin:8.1.3'
+//        }
     }
 }
 
