--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,11 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
     }
+    configurations.all {
+        resolutionStrategy {
+            force 'org.xerial:sqlite-jdbc:3.34.0'
+        }
+    }
 }
 
 task clean(type: Delete) {
